update: atualiza .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
+# Node modules
+node_modules/
+
 # Playwright test outputs
 test-results/
 *.webm
-*.mp4
 *.png
-
-# Node modules
-node_modules/
 
 # Logs
 *.log
 
+# Environment files
+.env
+
 # MacOS system files
-.D
+.DS_Store
